--- a/styles.css
+++ b/styles.css
@@ -557,10 +557,6 @@ img {
 }
 
 /*-------------------------EXHIBITIONS----------------------------*/
-.exhibitions img {
-  height: 100%;
-}
-
 .exhibitions {
   position: relative;
   background-image: url(../images/exhibition-1863344_1920.jpg);
@@ -578,8 +574,10 @@ img {
   text-align: center;
   padding: 30px;
   width: 200px;
-  bottom: 0;
-  left: 40%;
+  top: 70%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 .exhibitions-background {
@@ -648,8 +646,10 @@ img {
   text-align: center;
   padding: 30px;
   width: 200px;
-  bottom: 0;
-  left: 40%;
+  top: 70%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 .background-visit {
@@ -797,8 +797,10 @@ img {
   text-align: center;
   padding: 30px;
   width: 300px;
-  bottom: 0;
-  left: 35%;
+  top: 70%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 .background-getinvolved {
@@ -848,6 +850,56 @@ img {
   margin: 50px;
   background: rgb(255, 255, 255);
   background: rgb(255, 255, 255, 0.8);
+}
+
+/*--------------------------SUPPORT US-----------------------------*/
+.support-us {
+  background-image: url(../images/william-bout-264826.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 50vh;
+  position: relative;
+}
+
+.support-us h1 {
+  position: absolute;
+  display: inline-block;
+  background-color: #fff;
+  text-align: center;
+  padding: 30px;
+  width: 300px;
+  top: 70%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.support-background {
+  background-color: #1ba1e8;
+}
+
+.support-section {
+  display: flex;
+  width: 80%;
+  margin: 30px auto;
+  height: 100vh;
+}
+
+.support-img {
+  background-image: url(../images/toa-heftiba-412579.jpg);
+  background-position: center;
+  background-size: cover;
+  flex: 60%;
+  margin-right: 20px;
+  border: #fff solid 20px;
+}
+
+.support-txt {
+  flex: 40%;
+  background-color: #fff;
+  font-size: var(--fs-L);
+  padding: 30px;
 }
 
 /*------------------HEADER & FOOTER (mobile/ipad)------------------*/
@@ -1035,7 +1087,7 @@ img {
     padding: 30px 0;
     background-size: cover;
     background-position: center;
-    height: 50vh;
+    height: 60vh;
   }
 
   .about-section {
@@ -1044,10 +1096,8 @@ img {
   }
 
   .about-text {
-    bottom: 0;
     box-shadow: none;
-    height: fit-content;
-    padding: 20px;
+    padding: 10px;
     margin: auto 0;
     background: rgb(255, 255, 255);
     background: rgb(255, 255, 255, 0.8);
@@ -1055,7 +1105,7 @@ img {
 
   .about-text p {
     font-size: var(--fs-S);
-    padding: 0 25px;
+    padding: 0 15px;
   }
 
   .event-section {
@@ -1173,14 +1223,14 @@ img {
 
   /*------------------EXHIBITIONS------------------------*/
   .exhibitions {
-    max-height: 40vh;
+    max-height: 20vh;
   }
 
   .exhibitions h1 {
     padding: 15px;
     width: 150px;
     font-size: var(--fs-L);
-    left: 40%;
+    top: 50%;
   }
 
   .exhibitions-container {
@@ -1228,6 +1278,7 @@ img {
     padding: 15px;
     width: 100px;
     font-size: var(--fs-L);
+    top: 50%;
   }
 
   .opening-admission {
@@ -1327,7 +1378,7 @@ img {
     padding: 15px;
     width: 150px;
     font-size: var(--fs-L);
-    left: 30%;
+    top: 50%;
   }
 
   .getinvolved-section h2 {
@@ -1362,4 +1413,39 @@ img {
     background: rgb(255, 255, 255);
     background: rgb(255, 255, 255, 0.8);
   }
+
+  /*--------------------------SUPPORT US-----------------------------*/
+  .support-us {
+    height: 20vh;
+  }
+
+  .support-us h1 {
+    padding: 15px;
+    width: 150px;
+    font-size: var(--fs-L);
+    top: 50%;
+  }
+
+  .support-section {
+    margin: 30px;
+    height: 70vh;
+    padding: 20px;
+  }
+
+  .support-img {
+    border: none;
+    margin-right: 0;
+  }
+
+  .support-txt {
+    background-color: #fff;
+    font-size: var(--fs-M);
+    padding: 20px;
+  }
+
+
+
+  
+  
+  
 }
