--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,10 @@ footer {
   line-height: 15px;
 }
 
+.opening-hours h2 {
+  margin-left: 40px;
+}
+
 .opening-hours li {
   list-style: none;
   margin-left: 0;
@@ -367,7 +371,7 @@ img {
   bottom: 10%;
 }
 
-.box p {
+.box h2 {
   padding: 10px 40px;
   color: #fff;
   font-weight: bold;
@@ -470,6 +474,7 @@ img {
 
 .event-txt h2 {
   font-size: var(--fs-M);
+  padding-top: 5px;
   margin: 5px;
   text-align: center;
 }
@@ -658,7 +663,7 @@ img {
 
 .visit-section {
   position: relative;
-  margin: 0 50px;
+  margin: 20px 50px;
   display: flex;
   flex-direction: column;
 }
@@ -731,7 +736,7 @@ img {
 .visit-address p,
 .map-section h2 {
   margin-top: auto;
-  margin-left: 30%;
+  text-align: center;
 }
 
 .opening-hrs li,
@@ -1059,7 +1064,7 @@ img {
     object-fit: cover;
   }
 
-  .box p {
+  .box h2 {
     padding: 5px 10px;
     font-size: var(--fs-XS);
   }
