--- a/styles.css
+++ b/styles.css
@@ -634,7 +634,7 @@ img {
   margin: 10px;
 }
 
-/*------------------------VISIT US---------------------------*/
+/*---------------------------VISIT------------------------------*/
 .museum img {
   height: 100%;
 }
@@ -772,11 +772,8 @@ img {
 .cafe img,
 .shop img,
 .accessibility img {
-  max-height: 80vh;
-}
-
-.accessibility img {
-  background-position: top;
+  max-height: 70vh;
+  object-position: 30%;
 }
 
 .cafe-txt,
@@ -1060,12 +1057,12 @@ img {
   }
 
   .slider-container {
-    height: 30vh;
+    height: 40vh;
     background-position: bottom;
   }
 
   .slider-container img {
-    height: 30vh;
+    height: 40vh;
     object-fit: cover;
   }
 
