--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Nunito Sans", Verdana, Tahoma, sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -31,7 +31,7 @@ main {
 }
 
 h1 {
-  font-family: "Russo One", sans-serif, Verdana, Tahoma, sans-serif;
+  font-family: "Russo One", Verdana, Tahoma, sans-serif;
 }
 
 .spacer {
